CHANGELOG

When		Who		What
======================================================================================
2017-06-13	Richard Forth   Added more verbosity.
2017-04-27	Richard Forth   Added more verbosity, fixed some typos.
2017-04-20	Richard Forth   Closes #184 , Modified PHP Fatal Error Check.
				- Now works on subfolders correctly
				- removes need for backticked grep
				- cleaner and more structured summaries rather
				than actual log output.
2017-04-20	Richard Forth   Closes #183 , Added skip checks for the following:
				--skip-maxclients
				--skip-php-fatal
				--skip-updates
				See --help for more information.
2017-04-04	Richard Forth   Added 'Red Hat Enterprise Linux Server' to new
				list of supported OSes. Fixes #179. Bug. 
2017-04-02	Richard Forth   Added code to detect older EOL OS versions and abort.
				Still in soft-fail at the moment.
2017-04-02	Richard Forth   Added code to detect EOL OS versions and abort.
				Still in soft-fail at the moment.
2017-04-02 	Richard Forth   Laid foundations for new OS detection using
				some embedded python, this actually reduces
				required code base by over 100 lines of code,
				missing OS verification checks now but will
				fix this in next update.
2017-03-28 	Richard Forth   Small bug fix.
2017-03-25 	Richard Forth   Improved regex around the vhost count, specifically
				when looking for "port" it was capturing 
				aliases etc that has the word port as part of it, like
				support.mydomain.com, the regex should filter out what
				we dont want to see and only give us a true count of
				vhosts. Closes #160.
2017-03-25 	Richard Forth   Downgraded some warnings to advisory messages.
				Specifically where vhost count is greater than
				MaxClients / MaxRequestWorkers, also changed
				the wording slightly.
2017-03-25 	Richard Forth   Added a key to the usage() output, see --help
2017-03-25 	Richard Forth   Fixed some warnings and advisory messages not